--- a/index.html
+++ b/index.html
@@ -8,23 +8,16 @@
     <div class = "wrap">
       <div class = "postcard">
         <div class = "letter">
-          <form action="#" method="post" class="message_form">
-            <p class = "push">Dear </p><input type = "text" id = "recipient" name = "recipient_name" placeholder = "name of recipient" class = "push"><p> ,</p><br>
-            <label for = "message">Message</label><br>
-            <textarea id = "message" name = "message_to_recipient" placeholder = "Your eyes are like smoldering coals, merciless as they burn my soul in the most delightful way. Love you."></textarea><br>
-            <p>Yours Lovingly, </p><br>
-            <input type = "text" id = "sender_name" name = "sender" placeholder = "your name">
-          </form>
+            <p class = "push">Ei vida!</p><br>
+            <p id = "message">Eu conto cada segundo longe de você e imploro para que o tempo pare quando estamos juntos.<br>Sério, a palavra "muito" passou a ser pequena para definir a intensidade do meu amor por você.<br><br>Hoje te quero, hoje te preciso, hoje te suplico:<br>Te amei no passado, te amo no presente e, se o futuro permitir, te amarei eternamente.</p><br>
+            <p><br>Com todo meu amor,</p><br>
+            <p id = "sender_name">Rian.</p>
         </div>
         <div class = "address">
-          <img src = "http://i44.photobucket.com/albums/f9/dandee114/stamp_zpsvbuxiwih.png" class = "mail_stamp">
-          <form action="#" method="post" class="message_form">
-          <input type = "email" id = "recipient_email" name = "recipient_email" placeholder = "recipient's e-mail">
-          </form>
-          <p id = "address">Cherry Lane 1514,<br>
-            Lovely Heart,<br>
-            Hundred Acre Wood.
+          <img src = "https://cdn.discordapp.com/attachments/657560080023289887/1044780263613403166/unknown.png" class = "mail_stamp">
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><p id = "address">Loving you since 10/2021;<br>Dating you since 26/11/2021;<br>Marrying you in 01/01/2024.
           </p>
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1utDFK1ARQcuZSwapf3cfb?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
       </div>
     </div>
